--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,7 @@ dependencies:
   expandable_text: ^2.3.0
   shimmer: ^2.0.0
   sliding_clipped_nav_bar: ^3.1.0+4
+  loading_animation_widget: ^1.2.0+4
 
 dev_dependencies:
   flutter_test:
